--- a/.hintrc
+++ b/.hintrc
@@ -10,5 +10,10 @@
         "button-name": "off"
       }
     ]
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not ios_saf <= 12.5"
+  ]
 }
