--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "web-vitals": "^4.1.1"
+    "web-vitals": "^4.1.1",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "react-scripts start",
